Fixed colour contrast issues for text viewer

--- a/cotr/static/scss/_settings.scss
+++ b/cotr/static/scss/_settings.scss
@@ -82,6 +82,7 @@ $foundation-palette: (
 $light-gray: #e6e6e6;
 $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
+$darker-gray: #4a4a4a;
 $tertiary-color: #7c3b1e;
 $rich-black: #06070e;
 $black: #0a0a0a;
